--- a/.env
+++ b/.env
@@ -9,3 +9,8 @@ INSTALL_ORACLE=
 
 INSTALL_POSTGRES=
 INSTALL_MARIADB=
+
+# register rhel subscription
+# this password and username are redhat login password and username.
+REGISTER_SUBSCRIPTION_USERNAME=
+REGISTER_SUBSCRIPTION_PASSWORD=
