--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@ INSTALL_VSCODE=
 INSTALL_VIRTUALBOX=
 INSTALL_DOCKER=
 INSTALL_POWERSHELL=
-INSTALL_ORACLE=
+INSTALL_ORACLE_18C=
+INSTALL_ORACLE_21C=
 
 INSTALL_POSTGRES=
 INSTALL_MARIADB=
