--- a/vagrant/centosstream/Vagrantfile
+++ b/vagrant/centosstream/Vagrantfile
@@ -12,7 +12,7 @@ Vagrant.configure("2") do |config|
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
-  config.vm.box = "bento/centos-stream-8"
+  config.vm.box = "centos/stream8"
   # config.vm.box = "generic/fedora35"
 
   # Disable automatic box update checking. If you disable this, then
